--- a/services/cart-service/src/main/resources/application.yml
+++ b/services/cart-service/src/main/resources/application.yml
@@ -18,6 +18,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  flyway:
+    enabled: false
 
   config:
     import: optional:configserver:http://localhost:8888
@@ -26,3 +28,12 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
