--- a/services/product-service/src/main/resources/application.yml
+++ b/services/product-service/src/main/resources/application.yml
@@ -36,6 +36,9 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    health:
+      show-details: always
 
 eureka:
   client:
