--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -12,7 +12,35 @@ spring:
           enabled: true
           lower-case-service-id: true
 
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
+
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
+    fetch-registry: true
+    register-with-eureka: true
+    registry-fetch-interval-seconds: 30
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
+    instance-id: ${spring.application.name}:${server.port}
+    lease-renewal-interval-in-seconds: 30
+    lease-expiration-duration-in-seconds: 90
+
+#routes:
+#  - id: cart-service
+#    uri: lb://cart-service
+#    predicates:
+#      - Path=/api/cart/**
+#    filters:
+#      - StripPrefix=2
+#  - id: order-service
+#    uri: lb://order-service
+#    predicates:
+#      - Path=/api/orders/**
+#    filters:
+#      - StripPrefix=2
