--- a/services/cart-service/src/main/resources/application.yml
+++ b/services/cart-service/src/main/resources/application.yml
@@ -1,3 +1,51 @@
+#server:
+#  port: 8083
+#
+#spring:
+#  application:
+#    name: cart-service
+#
+#  datasource:
+#    url: jdbc:postgresql://localhost:5433/cartdb
+#    username: root
+#    password: root
+#    driver-class-name: org.postgresql.Driver
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
+#  flyway:
+#    enabled: false
+#
+#  config:
+#    import: optional:configserver:http://localhost:8888
+#
+##eureka:
+##  client:
+##    service-url:
+##      defaultZone: http://localhost:8761/eureka
+#
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
+#  instance:
+#    prefer-ip-address: true
+#    hostname: localhost
+#
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: "*"
+#  endpoint:
+#    health:
+#      show-details: always
+
 server:
   port: 8083
 
@@ -18,6 +66,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
   flyway:
     enabled: false
 
@@ -27,7 +77,16 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
+    fetch-registry: true
+    register-with-eureka: true
+    registry-fetch-interval-seconds: 30
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
+    instance-id: ${spring.application.name}:${server.port}
+    lease-renewal-interval-in-seconds: 30
+    lease-expiration-duration-in-seconds: 90
 
 management:
   endpoints:
